--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     $.initWaring();
     $.initModeAnaly();
     $.initAlarms();
-    $(function (){
-        var docHeight=document.documentElement.clientHeight;
-        $(".tabCon table,.rankList").css("max-height",docHeight-340);
+    $(function () {
+        var docHeight = document.documentElement.clientHeight;
+        $(".tabCon table,.rankList").css("max-height", docHeight - 340);
     });
 </script>
 </html>
