--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -27,165 +27,30 @@
                 <a class="btn">保存</a>
             </div>
             <div class="modelCon">
-                <div class="item">
-                    <div class="itemCon flex"><em></em><p>日评模型</p></div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="start1"><label for="start1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>启用</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="day1"><label for="day1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>可用性好评，达标条件：></p>
-                        <input class="input" type="text">
-                        <p>%</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="day2"><label for="day2"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>性能考评，达标条件：<</p>
-                        <input class="input" type="text">
-                        <p>个性能故障</p>
-                    </div>
-                    <div class="itemCon">
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="day3"><label for="day3"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>数据质量考评，达标条件：></p>
-                            <input class="input" type="text">
-                            <p>分（综合评分）</p>
-                        </div>
-                        <div class="modelList">
-                            <ul>
-                                <li>
-                                    <i></i>
-                                    <div class="checkList">
-                                        <input type="checkbox" class="checkbox" id="day4"><label for="day4"><img src="images/template/icon-check.png" alt=""></label>
-                                        <p>逻辑检查评分：></p>
-                                        <input class="input" type="text">
-                                        <p>分</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="tabList">
+                    <ul>
+                        <li class="checked"><span>日评模型</span></li>
+                        <li><span>周评模型</span></li>
+                        <li><span>月评模型</span></li>
+                        <li><span>年评模型</span></li>
+                    </ul>
                 </div>
-                <div class="item">
-                    <div class="itemCon flex"><em></em><p>周评模型</p></div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="start2"><label for="start2"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>启用</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="week1"><label for="week1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>可用性好评，达标条件：></p>
-                        <input class="input" type="text">
-                        <p>%</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="week2"><label for="week2"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>性能考评，达标条件：<</p>
-                        <input class="input" type="text">
-                        <p>个性能故障</p>
-                    </div>
-                    <div class="itemCon">
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="week3"><label for="week3"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>数据质量考评，达标条件：></p>
-                            <input class="input" type="text">
-                            <p>分（综合评分）</p>
-                        </div>
-                        <div class="modelList">
-                            <ul>
-                                <li>
-                                    <i></i>
-                                    <div class="checkList">
-                                        <input type="checkbox" class="checkbox" id="week4"><label for="week4"><img src="images/template/icon-check.png" alt=""></label>
-                                        <p>逻辑检查评分：></p>
-                                        <input class="input" type="text">
-                                        <p>分</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="itemCon flex"><em></em><p>月评模型</p></div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="start3"><label for="start3"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>启用</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="mount1"><label for="mount1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>可用性好评，达标条件：></p>
-                        <input class="input" type="text">
-                        <p>%</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="mount2"><label for="mount2"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>性能考评，达标条件：<</p>
-                        <input class="input" type="text">
-                        <p>个性能故障</p>
-                    </div>
-                    <div class="itemCon">
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="mount3"><label for="mount3"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>数据质量考评，达标条件：></p>
-                            <input class="input" type="text">
-                            <p>分（综合评分）</p>
-                        </div>
-                        <div class="modelList">
-                            <ul>
-                                <li>
-                                    <i></i>
-                                    <div class="checkList">
-                                        <input type="checkbox" class="checkbox" id="mount4"><label for="mount4"><img src="images/template/icon-check.png" alt=""></label>
-                                        <p>逻辑检查评分：></p>
-                                        <input class="input" type="text">
-                                        <p>分</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="itemCon flex"><em></em><p>年评模型</p></div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="start4"><label for="start1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>启用</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="year1"><label for="year1"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>可用性好评，达标条件：></p>
-                        <input class="input" type="text">
-                        <p>%</p>
-                    </div>
-                    <div class="checkList">
-                        <input type="checkbox" class="checkbox" id="year2"><label for="year2"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>性能考评，达标条件：<</p>
-                        <input class="input" type="text">
-                        <p>个性能故障</p>
-                    </div>
-                    <div class="itemCon">
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="year3"><label for="year3"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>数据质量考评，达标条件：></p>
-                            <input class="input" type="text">
-                            <p>分（综合评分）</p>
-                        </div>
-                        <div class="modelList">
-                            <ul>
-                                <li>
-                                    <i></i>
-                                    <div class="checkList">
-                                        <input type="checkbox" class="checkbox" id="year4"><label for="year4"><img src="images/template/icon-check.png" alt=""></label>
-                                        <p>逻辑检查评分：></p>
-                                        <input class="input" type="text">
-                                        <p>分</p>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="table">
+                    <table>
+                        <tbody id="alarms">
+                        <tr>
+                            <td rowspan="5">性能告警</td>
+                            <td rowspan="3">服务器</td>
+                            <td>严重告警率</td>
+                        </tr>
+                        <tr>
+                            <td>故障告警率</td>
+                        </tr>
+                        <tr>
+                            <td>其他告警率</td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
