--- a/index.html
+++ b/index.html
@@ -23,58 +23,58 @@
     <div id="content" class="index">
         <div class="leftCon">
             <div class="conList" id="waring">
-                <!--<div class="layout">
+                <div class="layout">
                     <div class="item">
-                        <p><span>153</span>服务器</p>
-                        <img src="images/index/icon1.png"/>
+                        <p><span>0</span>服务器</p>
+                        <img src="images/index/icon-server.png"/>
                     </div>
                     <div class="item-1">
                         <ul>
-                            <li><img src="images/index/icon9.png"/><p>10</p></li>
-                            <li><img src="images/index/icon10.png"/><p>3</p></li>
-                            <li><img src="images/index/icon11.png"/><p>140</p></li>
+                            <li><img src="images/index/icon9.png"/><p>0</p></li>
+                            <li><img src="images/index/icon10.png"/><p>0</p></li>
+                            <li><img src="images/index/icon11.png"/><p>0</p></li>
                         </ul>
                     </div>
                 </div>
                 <div class="layout">
                     <div class="item">
-                        <p><span>153</span>数据库</p>
-                        <img src="images/index/icon2.png"/>
+                        <p><span>0</span>数据库</p>
+                        <img src="images/index/icon-sql.png"/>
                     </div>
                     <div class="item-1">
                         <ul>
-                            <li><img src="images/index/icon9.png"/><p>10</p></li>
-                            <li><img src="images/index/icon10.png"/><p>3</p></li>
-                            <li><img src="images/index/icon11.png"/><p>140</p></li>
+                            <li><img src="images/index/icon9.png"/><p>0</p></li>
+                            <li><img src="images/index/icon10.png"/><p>0</p></li>
+                            <li><img src="images/index/icon11.png"/><p>0</p></li>
                         </ul>
                     </div>
                 </div>
                 <div class="layout">
                     <div class="item">
-                        <p><span>153</span>中间件</p>
-                        <img src="images/index/icon3.png"/>
+                        <p><span>0</span>中间件</p>
+                        <img src="images/index/icon-middleware.png"/>
                     </div>
                     <div class="item-1">
                         <ul>
-                            <li><img src="images/index/icon9.png"/><p>10</p></li>
-                            <li><img src="images/index/icon10.png"/><p>3</p></li>
-                            <li><img src="images/index/icon11.png"/><p>140</p></li>
+                            <li><img src="images/index/icon9.png"/><p>0</p></li>
+                            <li><img src="images/index/icon10.png"/><p>0</p></li>
+                            <li><img src="images/index/icon11.png"/><p>0</p></li>
                         </ul>
                     </div>
                 </div>
                 <div class="layout">
                     <div class="item">
-                        <p><span>153</span>工单</p>
+                        <p><span>0</span>工单</p>
                         <img src="images/index/icon4.png"/>
                     </div>
                     <div class="item-1">
                         <ul>
-                            <li><img src="images/index/icon12.png"/><p>10</p></li>
-                            <li><img src="images/index/icon13.png"/><p>3</p></li>
-                            <li><img src="images/index/icon14.png"/><p>140</p></li>
+                            <li><img src="images/index/icon12.png"/><p>0</p></li>
+                            <li><img src="images/index/icon13.png"/><p>0</p></li>
+                            <li><img src="images/index/icon14.png"/><p>0</p></li>
                         </ul>
                     </div>
-                </div>-->
+                </div>
             </div>
             <div class="listCon">
                 <div class="tabCon">
