--- a/index.html
+++ b/index.html
@@ -92,13 +92,6 @@
                                 </tr>
                                 </thead>
                                 <tbody id="table">
-                                <!--<tr>
-                                    <td>大数据治理应用平台</td>
-                                    <td><span class="green"></span>0/3</td>
-                                    <td><span class="green"></span>0/3</td>
-                                    <td><span class="red"></span>1/3</td>
-                                    <td><span class="green"></span>0/3</td>
-                                </tr>-->
                                 </tbody>
                             </table>
                         </div>
@@ -209,7 +202,7 @@
     $.initAlarms();
     $(function () {
         var docHeight = window.innerHeight || document.documentElement.clientHeight;
-        $(".tabCon table,.rankList").css("max-height", docHeight - 340);
+        $("#table,.rankList").css("max-height", docHeight - 382);
     });
 </script>
 </html>
