--- a/evaluationModel.html
+++ b/evaluationModel.html
@@ -36,50 +36,56 @@
                     <a class="btn">保存</a>
                 </div>
                 <div class="table">
-                    <table>
-                        <tr>
-                            <td colspan="4">可用性<input placeholder="70%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>服务器可用性<input placeholder="25%"><img src="images/template/icon-change.png"/></td>
-                            <td>中间件可用性<input placeholder="25%"><img src="images/template/icon-change.png"/></td>
-                            <td>服务器可用性<input placeholder="25%"><img src="images/template/icon-change.png"/></td>
-                            <td>物联设备可用性<input placeholder="25%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td colspan="4">性能告警<input placeholder="20%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>服务器<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>中间件<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>服务器<input placeholder="30%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>严重告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>严重告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>严重告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>故障告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>故障告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                            <td>故障告警率<input placeholder="35%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>其他告警率<input placeholder="30%"><img src="images/template/icon-change.png"/></td>
-                            <td>其他告警率<input placeholder="30%"><img src="images/template/icon-change.png"/></td>
-                            <td>其他告警率<input placeholder="30%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                    </table>
-                    <table>
-                        <tr>
-                            <td colspan="4">数据质量<input placeholder="10%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                        <tr>
-                            <td>综合评分<input placeholder="25%"><img src="images/template/icon-change.png"/></td>
-                        </tr>
-                    </table>
+                    <div class="tabCon checked">
+                        <div class="tabTit"><span>可用性<input placeholder="10%"><img src="images/template/icon-change.png"/></span><i></i></div>
+                        <div class="conList">
+                            <ul>
+                                <li><div class="itemList"><span>服务器可用性</span><input placeholder="25%"><img src="images/template/icon-change.png"/></div></li>
+                                <li><div class="itemList"><span>中间件可用性</span><input placeholder="25%"><img src="images/template/icon-change.png"/></div></li>
+                                <li><div class="itemList"><span>服务器可用性</span><input placeholder="25%"><img src="images/template/icon-change.png"/></div></li>
+                                <li><div class="itemList"><span>物联设备可用性</span><input placeholder="25%"><img src="images/template/icon-change.png"/></div></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tabCon">
+                        <div class="tabTit"><span>性能告警<input placeholder="70%"><img src="images/template/icon-change.png"/></span><i></i></div>
+                        <div class="conList">
+                            <ul>
+                                <li>
+                                    <div class="itemList"><span>服务器</span><input placeholder="35%"><img src="images/template/icon-change.png"/></div>
+                                    <ul class="navSub">
+                                        <li><span>严重告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>故障告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>其他告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <div class="itemList"><span>中间件</span><input placeholder="35%"><img src="images/template/icon-change.png"/></div>
+                                    <ul class="navSub">
+                                        <li><span>严重告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>故障告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>其他告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <div class="itemList"><span>服务器</span><input placeholder="35%"><img src="images/template/icon-change.png"/></div>
+                                    <ul class="navSub">
+                                        <li><span>严重告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>故障告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                        <li><span>其他告警率</span><input placeholder="35%"><img src="images/template/icon-change.png"/></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="tabCon">
+                        <div class="tabTit"><span>数据质量<input placeholder="20%"><img src="images/template/icon-change.png"/></span><i></i></div>
+                        <div class="conList">
+                            <ul>
+                                <li><div class="itemList"><span>综合评分</span><input placeholder="100%"><img src="images/template/icon-change.png"/></div></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -90,7 +96,10 @@
 <script>
     $(".tabList li").click(function () {
         $(this).addClass("checked").siblings("li").removeClass("checked")
-    })
+    });
+    $(".tabTit").click(function () {
+        $(this).parents(".tabCon").toggleClass("checked").siblings(".tabCon").removeClass("checked");
+    });
     $(function () {
         var docHeight = window.innerHeight || document.documentElement.clientHeight;
         $("#content .layout").css("height", docHeight - 142);
