--- a/evaluationPlan.html
+++ b/evaluationPlan.html
@@ -21,90 +21,125 @@
 <div id="main">
     <div id="head"><common-head></common-head></div>
     <div id="content" class="plan">
-        <div class="layout">
-            <div class="title">
-                <span>考评计划管理</span>
-                <a class="btn" onclick="$.savePlan()">保存</a>
+        <div class="layoutList">
+            <div class="layout">
+                <div class="title">
+                    <span>考评计划管理</span>
+                </div>
+                <div class="checkCon">
+                    <div class="checkItem">
+                        <div class="checkList position checked">
+                            <input type="checkbox" class="checkbox" id="day"><label for="day"><img src="images/template/icon-check.png" alt=""></label>
+                            <p>每日</p>
+                        </div>
+                        <div class="itemTime"><span>时间：</span><input class="time" type="text" id="dayTime"/></div>
+                        <div class="item">
+                            <p>报表日期：</p>
+                            <div class="checkList">
+                                <input type="checkbox" class="checkbox" id="Saturday"><label for="Saturday"><img src="images/template/icon-check.png" alt=""></label>
+                                <p>周六</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="checkbox" class="checkbox" id="Sunday"><label for="Sunday"><img src="images/template/icon-check.png" alt=""></label>
+                                <p>周日</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <p>接收报表的邮件地址：</p>
+                            <input class="input" type="email" id="dayInput" value="">
+                        </div>
+                    </div>
+                    <div class="checkItem">
+                        <div class="checkList position checked">
+                            <input type="checkbox" class="checkbox" id="week"><label for="week"><img src="images/template/icon-check.png" alt=""></label>
+                            <p>每周</p>
+                        </div>
+                        <div class="itemTime"><span>时间：</span><input class="time" type="text" id="weekTime"/></div>
+                        <div class="item">
+                            <p>报表日期：</p>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="1" name="time" id="radioSunday">
+                                <p>周日</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="2" name="time" id="radioMonday">
+                                <p>周一</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="3" name="time" id="radioTuesday">
+                                <p>周二</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="4" name="time" id="radioWednesday">
+                                <p>周三</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="5" name="time" id="radioThursday">
+                                <p>周四</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="6" name="time" id="radioFriday">
+                                <p>周五</p>
+                            </div>
+                            <div class="checkList">
+                                <input type="radio" class="radio" value="7" name="time" id="radioSaturday">
+                                <p>周六</p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <p>接收报表的邮件地址：</p>
+                            <input class="input" type="email" id="weekInput">
+                        </div>
+                    </div>
+                    <div class="checkItem marginBottom">
+                        <div class="checkList position checked">
+                            <input type="checkbox" class="checkbox" id="mount"><label for="mount"><img src="images/template/icon-check.png" alt=""></label>
+                            <p>每月</p>
+                        </div>
+                        <div class="itemTime"><span>时间：</span><input class="time" type="text" id="mountTime"/></div>
+                        <div class="item">
+                            <p>日期：</p>
+                            <input class="input inputTime" type="text" id="mountDay">
+                            <p>日</p>
+                        </div>
+                        <div class="item">
+                            <p>接收报表的邮件地址：</p>
+                            <input class="input" type="email" id="mountInput">
+                        </div>
+                    </div>
+                    <a class="btn" onclick="$.savePlan()">保存</a>
+                </div>
             </div>
-            <div class="checkCon">
-                <div class="checkItem">
-                    <div class="checkList checked">
-                        <input type="checkbox" class="checkbox" id="day"><label for="day"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>每日</p>
-                    </div>
-                    <div class="itemTime"><span>时间：</span><input class="time" type="text" id="dayTime"/></div>
-                    <div class="item">
-                        <p>报表日期：</p>
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="Saturday"><label for="Saturday"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>周六</p>
-                        </div>
-                        <div class="checkList">
-                            <input type="checkbox" class="checkbox" id="Sunday"><label for="Sunday"><img src="images/template/icon-check.png" alt=""></label>
-                            <p>周日</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <p>接收报表的邮件地址：</p>
-                        <input class="input" type="email" id="dayInput" value="">
-                    </div>
+        </div>
+        <div class="layoutList">
+            <div class="layout">
+                <div class="title">
+                    <span>邮件服务配置</span>
                 </div>
-                <div class="checkItem">
-                    <div class="checkList checked">
-                        <input type="checkbox" class="checkbox" id="week"><label for="week"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>每周</p>
-                    </div>
-                    <div class="itemTime"><span>时间：</span><input class="time" type="text" id="weekTime"/></div>
-                    <div class="item">
-                        <p>报表日期：</p>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="1" name="time" id="radioSunday">
-                            <p>周日</p>
+                <div class="checkCon">
+                    <div class="checkItem noBorder">
+                        <div class="itemList1">
+                            <span>SMTP服务器地址：</span><input type="text" placeholder="请输入" id="host">
+                            <span>服务端口：</span><input class="width" type="text" id="port">
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="2" name="time" id="radioMonday">
-                            <p>周一</p>
+                        <div class="itemList1">
+                            <span>发件人邮件地址：</span><input type="text" placeholder="请输入" id="fromEmail">
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="3" name="time" id="radioTuesday">
-                            <p>周二</p>
+                        <div class="itemList1">
+                            <div class="checkList checked">
+                                <!--<input type="checkbox" class="checkbox" checked id="mailCode"><label for="mailCode"><img src="images/template/icon-check.png" alt=""></label>-->
+                                <p>发送邮件需要验证</p>
+                            </div>
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="4" name="time" id="radioWednesday">
-                            <p>周三</p>
+                        <div class="itemList1 account">
+                            <span>用户名：</span><input type="text" placeholder="请输入" id="username">
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="5" name="time" id="radioThursday">
-                            <p>周四</p>
+                        <div class="itemList1 account">
+                            <span>密码：</span><input type="password" placeholder="请输入" id="password">
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="6" name="time" id="radioFriday">
-                            <p>周五</p>
+                        <div class="itemList1 account center">
+                            <a class="btn" onclick="$.saveMail()">保存</a>
                         </div>
-                        <div class="checkList">
-                            <input type="radio" class="radio" value="7" name="time" id="radioSaturday">
-                            <p>周六</p>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <p>接收报表的邮件地址：</p>
-                        <input class="input" type="email" id="weekInput">
-                    </div>
-                </div>
-                <div class="checkItem">
-                    <div class="checkList checked">
-                        <input type="checkbox" class="checkbox" id="mount"><label for="mount"><img src="images/template/icon-check.png" alt=""></label>
-                        <p>每月</p>
-                    </div>
-                    <div class="itemTime"><span>时间：</span><input class="time" type="text" id="mountTime"/></div>
-                    <div class="item">
-                        <p>日期：</p>
-                        <input class="input inputTime" type="text" id="mountDay">
-                        <p>日</p>
-                    </div>
-                    <div class="item">
-                        <p>接收报表的邮件地址：</p>
-                        <input class="input" type="email" id="mountInput">
                     </div>
                 </div>
             </div>
@@ -117,6 +152,7 @@
 <script src="js/jquery-clock-timepicker.min.js"></script>
 <script type="text/javascript">
     $.initPlan();
+    $.initMail();
     $(document).ready(function() {
         $('.time').clockTimePicker({});
     });
