--- a/management.html
+++ b/management.html
@@ -24,15 +24,15 @@
         <div class="layout">
             <div class="title">
                 <span>系统管理</span>
-                <a class="btn" onclick="$('#addObject').show()">保存</a>
+                <!--<a class="btn">保存</a>-->
             </div>
             <div class="manageCon">
                 <div class="itemTit">用户权限管理</div>
                 <div class="manageItem">
                     <div class="item">
-                        <p>用户列表<img src="images/template/icon-flash.png"/></p>
+                        <p>用户列表<img v-on:click="flashData" src="images/template/icon-flash.png"/></p>
                         <ul>
-                            <li v-for="(item,index) in userList" :class="{checked:userIndex==index}" v-on:click="checkUser(item.id,index,item)">{{item.user}}</li>
+                            <li v-for="(item,index) in userList" :class="{checked:userIndex==index}" v-on:click="checkUser(item.id,index,item)">{{item.username}}</li>
                         </ul>
                     </div>
                     <div class="itemCon">
@@ -44,7 +44,7 @@
                             <div class="item">
                                 <p>管理员用户</p>
                                 <ul>
-                                    <li v-for="(item,index) in adminList" :class="{checked:adminIndex==index}" v-on:click="checkAdmin(item.id,index,item)">{{item.user}}</li>
+                                    <li v-for="(item,index) in adminList" :class="{checked:adminIndex==index}" v-on:click="checkAdmin(item.id,index,item)">{{item.username}}</li>
                                 </ul>
                             </div>
                         </div>
@@ -56,7 +56,7 @@
                             <div class="item">
                                 <p>普通用户</p>
                                 <ul>
-                                    <li v-for="(item,index) in generalList" :class="{checked:generalIndex==index}" v-on:click="checkGeneral(item.id,index,item)">{{item.user}}</li>
+                                    <li v-for="(item,index) in generalList" :class="{checked:generalIndex==index}" v-on:click="checkGeneral(item.id,index,item)">{{item.username}}</li>
                                 </ul>
                             </div>
                         </div>
